package ch.uzh.ifi.hase.soprafs22.screwyourneighborserver.entity;

import com.fasterxml.jackson.annotation.JsonBackReference;
import com.fasterxml.jackson.annotation.JsonIgnore;
import java.util.ArrayList;
import java.util.Collection;
import java.util.NoSuchElementException;
import javax.persistence.*;

@Entity
public class Match {
  @Id @GeneratedValue private Long id;

  private int matchNumber;

  @OneToMany(
      mappedBy = "match",
      cascade = {CascadeType.ALL})
  private Collection<Round> rounds = new ArrayList<>();

  @OneToMany(
      mappedBy = "match",
      cascade = {CascadeType.ALL})
  private Collection<Hand> hands = new ArrayList<>();

  @JsonBackReference("match-game")
  @ManyToOne(fetch = FetchType.LAZY)
  private Game game;

  private MatchState matchState;

  public Long getId() {
    return id;
  }

  public int getMatchNumber() {
    return matchNumber;
  }

  public Collection<Round> getRounds() {
    return rounds;
  }

  public Game getGame() {
    return game;
  }

  public MatchState getMatchState() {
    return matchState;
  }

  @JsonIgnore
  public void setId(Long id) {
    this.id = id;
  }

  public void setMatchNumber(int matchNumber) {
    this.matchNumber = matchNumber;
  }

  public void setRounds(Collection<Round> rounds) {
    this.rounds = rounds;
  }

  public void setGame(Game game) {
    this.game = game;
  }

  public void setMatchState(MatchState matchState) {
    this.matchState = matchState;
  }

  public Collection<Hand> getHands() {
    return hands;
  }

  @JsonIgnore
  public Round getActiveRound() {
    for (Round round : rounds) {
      if (round.isActive()) {
        return round;
      }
    }
    throw new NoSuchElementException();
  }
}
